# tetris-cpp

./: CMakeLists.txt  CMakePresets.json  README.md
resources/: create_icon.html  icon_gen.py  resources.qrc  tetris.rc
src/: main.cpp  mainwindow.cpp  mainwindow.h  tetrisboard.cpp  tetrisboard.h  tetrisgame.cpp  tetrisgame.h
